apps/web-app/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web-app
spec:
  to:
    kind: Service
    name: web-app
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
